--- a/build-tools/container-multistage-build-all-dependencies/Dockerfile-build-dependencies
+++ b/build-tools/container-multistage-build-all-dependencies/Dockerfile-build-dependencies
@@ -110,3 +110,4 @@ COPY --from=builder-all-library  /usr/sqlite3/ /usr/sqlite3/
 COPY --from=builder-all-library  /usr/oniguruma/ /usr/oniguruma/
 COPY --from=builder-all-library  /usr/libsodium/ /usr/libsodium/
 COPY --from=builder-all-library  /usr/libyaml /usr/libyaml
+COPY --from=builder-all-library  /usr/nghttp2/ /usr/nghttp2/
