--- a/.github/workflows/linux-amd64.yml
+++ b/.github/workflows/linux-amd64.yml
@@ -3,7 +3,7 @@ name: build-php-cli-linux-amd64
 on: [ push, pull_request ]
 
 env:
-  BUILD_PHP_VERSION: 8.2.4
+  BUILD_PHP_VERSION: 7.3.33
 
 jobs:
   linux:
@@ -25,7 +25,7 @@ jobs:
           uname -s
           uname -m
           uname -r
-          # echo "BUILD_PHP_VERSION=8.2.4" >> "$GITHUB_ENV"
+          # echo "BUILD_PHP_VERSION=7.3.33" >> "$GITHUB_ENV"
       - name: Prepare Libraries and Extensions
         uses: addnab/docker-run-action@v3
         with:
@@ -47,7 +47,7 @@ jobs:
             pwd
             set -x
             composer update --no-dev  --optimize-autoloader
-            php prepare.php  +inotify +apcu +ds -mysqli -soap -mongodb
+            php prepare.php  +inotify +apcu +ds -mysqli -soap -gd
             chmod a+x make.sh
             head -n 20 make.sh
       - name: Build
@@ -69,35 +69,10 @@ jobs:
           name: php-cli-linux-x64-${{ env.BUILD_PHP_VERSION }}
           retention-days: 7
           path: ./bin/php-${{ env.BUILD_PHP_VERSION }}/bin/php
-      - name: Prepare sfx micro
-        uses: addnab/docker-run-action@v3
-        with:
-          image: docker.io/jingjingxyk/build-swoole-cli:native-php-all-dependencies-alpine-20230429T064207Z
-          options: -v ${{ github.workspace }}:/work -w /work
-          run: |
-            set -eux
-            export PATH=/work/bin/runtime:$PATH
-            php prepare.php  +inotify +apcu +ds -mysqli -soap -mongodb --with-php-sfx-micro=1
-            chmod a+x make.sh
-      - name: Build sfx micro
-        uses: addnab/docker-run-action@v3
-        with:
-          image: docker.io/jingjingxyk/build-swoole-cli:native-php-all-dependencies-alpine-20230429T064207Z
-          options: -v ${{ github.workspace }}:/work -w /work
-          run: |
-            ./make.sh config
-            ./make.sh build
-            ./make.sh archive-sfx-micro
-      - name: production artifacts sfx micro
-        uses: actions/upload-artifact@v3
-        with:
-          name: php-sfx-micro-linux-x64-${{ env.BUILD_PHP_VERSION }}
-          retention-days: 7
-          path: ./thirdparty/php_src/sapi/micro/micro.sfx
-      - name: Release sfx micro
+      - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             php-cli-v${{ env.BUILD_PHP_VERSION }}-linux-x64.tar.xz
-            php-sfx-micro-v${{ env.BUILD_PHP_VERSION }}-linux-x64.tar.xz
+
