--- a/.github/workflows/linux-amd64.yml
+++ b/.github/workflows/linux-amd64.yml
@@ -41,28 +41,28 @@ jobs:
       - name: Prepare
         uses: addnab/docker-run-action@v3
         with:
-          image: docker.io/jingjingxyk/build-swoole-cli:native-php-all-dependencies-alpine-20230429T064207Z
+          image: docker.io/jingjingxyk/build-swoole-cli:native-php-all-dependencies-alpine-php-7.4-x86_64-20230504T124927Z
           options: -v ${{ github.workspace }}:/work -w /work
           run: |
             pwd
             set -x
             composer update --no-dev  --optimize-autoloader
-            php prepare.php  +inotify +apcu +ds -mysqli -soap -gd
+            php prepare.php  +inotify +apcu +ds -gd -zip -imagick # gd 库 libXpm 编译不成功，libzip 需要降低版本 ，imagick 依赖libzip
             chmod a+x make.sh
-            head -n 20 make.sh
+            bash ./make.sh curl # 需要重新编译 php7.33 依赖库不包含 nghttp2 (curl nghttp2 与 swoole 里面包含的nghttp2 冲突，保留 swoole 内置的nghttp2)
       - name: Build
         uses: addnab/docker-run-action@v3
         with:
-          image: docker.io/jingjingxyk/build-swoole-cli:native-php-all-dependencies-alpine-20230429T064207Z
+          image: docker.io/jingjingxyk/build-swoole-cli:native-php-all-dependencies-alpine-php-7.4-x86_64-20230504T124927Z
           options: -v ${{ github.workspace }}:/work -w /work -e "BUILD_PHP_VERSION=${{ env.BUILD_PHP_VERSION }}"
           run: |
             ./make.sh config
             ./make.sh build
             ./make.sh archive
-            ./thirdparty/php_src/sapi/cli/php -v
-            file ./bin/php-${{ env.BUILD_PHP_VERSION }}/bin/php
-            readelf -h ./bin/php-${{ env.BUILD_PHP_VERSION }}/bin/php
-            ./bin/php-${{ env.BUILD_PHP_VERSION }}/bin/php -r "echo PHP_VERSION;"
+            ./php_src/sapi/cli/php -v
+            file ./bin/php-${BUILD_PHP_VERSION}/bin/php
+            readelf -h ./bin/php-${BUILD_PHP_VERSION}/bin/php
+            ./bin/php-${BUILD_PHP_VERSION}/bin/php -r "echo PHP_VERSION;"
       - name: production artifacts
         uses: actions/upload-artifact@v3
         with:
