--- a/.github/workflows/linux-amd64.yml
+++ b/.github/workflows/linux-amd64.yml
@@ -60,7 +60,7 @@ jobs:
             ./make.sh config
             ./make.sh build
             ./make.sh archive
-            ./php_src/sapi/cli/php -v
+            ./bin/php-${BUILD_PHP_VERSION}/bin/php -v
             file ./bin/php-${BUILD_PHP_VERSION}/bin/php
             readelf -h ./bin/php-${BUILD_PHP_VERSION}/bin/php
             ./bin/php-${BUILD_PHP_VERSION}/bin/php -r "echo PHP_VERSION;"
