--- a/.github/workflows/macos-x86_64.yml
+++ b/.github/workflows/macos-x86_64.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           export PATH=${GITHUB_WORKSPACE}/bin/runtime:$PATH
           composer update --no-dev  --optimize-autoloader
-          php prepare.php --without-docker=1  --with-build-type=release  +ds +apcu
+          php prepare.php --without-docker=1  --with-build-type=release  +ds +apcu -gd -zip -imagick
 
       - name: Cache all-library
         uses: actions/cache@v3
