--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -37,17 +37,10 @@ jobs:
           # git submodule update --init
 
       - name: Prepare Libraries and Extensions
-        uses: addnab/docker-run-action@v3
-        with:
-          image: docker.io/jingjingxyk/build-swoole-cli:download-box-nginx-alpine-20230429T061856Z
-          options: -v ${{ github.workspace }}:/work -w /work
-          run: |
-            set -x
-            mkdir -p pool/lib
-            mkdir -p pool/ext
-            mkdir -p ext
-            cp -rf /usr/share/nginx/html/extensions/* pool/ext
-            cp -rf /usr/share/nginx/html/libraries/* pool/lib
+      - name: Prepare Libraries and Extensions
+        run: |
+          set -x
+          bash sapi/download-box/download-box-get-archive-from-container.sh
       - name: Prepare
         uses: addnab/docker-run-action@v3
         with:
