--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -51,7 +51,7 @@ jobs:
 
             # composer update --no-dev  --optimize-autoloader
             composer update   --optimize-autoloader
-            php prepare.php   --with-swoole-pgsql=1  +inotify +apcu +ds +xlswriter +ssh2 +pgsql +pdo_pgsql -mongodb
+            php prepare.php   --with-swoole-pgsql=1 --with-global-prefix=/usr  +inotify +apcu +ds +xlswriter +ssh2 +pgsql +pdo_pgsql
 
             chmod a+x make.sh
             head -n 20 make.sh
