--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -51,12 +51,8 @@ jobs:
 
             # composer update --no-dev  --optimize-autoloader
             composer update   --optimize-autoloader
-            php prepare.php    --with-global-prefix=/usr  +inotify +apcu +ds +xlswriter +ssh2
+            php prepare.php    --with-global-prefix=/usr  +inotify +apcu +ds +xlswriter +ssh2 -imagick
 
-            chmod a+x make.sh
-            head -n 20 make.sh
-            php ./vendor/bin/phpunit ./sapi/unit/MainTest.php  --list-tests
-            php ./vendor/bin/phpunit ./sapi/unit/MainTest.php
 
       - name: Build
         uses: addnab/docker-run-action@v3
@@ -64,12 +60,9 @@ jobs:
           image: docker.io/jingjingxyk/build-swoole-cli:native-php-all-dependencies-alpine-php-7.4-x86_64-20230504T124927Z
           options: -v ${{ github.workspace }}:/work -w /work -e "BUILD_PHP_VERSION=${{ env.BUILD_PHP_VERSION }}"
           run: |
-            bash ./make.sh imagemagick
             bash ./make.sh config
             bash ./make.sh build
             bash ./make.sh archive
-            # ./php-src/sapi/cli/php ./vendor/bin/phpunit ./sapi/unit/MainTest.php  --list-tests
-            # ./php-src/sapi/cli/php ./vendor/bin/phpunit ./sapi/unit/MainTest.php
 
       - name: Show Build Result
         run: |
