--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -51,7 +51,7 @@ jobs:
 
             # composer update --no-dev  --optimize-autoloader
             composer update   --optimize-autoloader
-            php prepare.php    --with-global-prefix=/usr  +inotify +apcu +ds +xlswriter +ssh2 -imagick
+            php prepare.php    --with-global-prefix=/usr  +inotify +apcu +ds +xlswriter +ssh2
 
 
       - name: Build
@@ -60,6 +60,7 @@ jobs:
           image: docker.io/jingjingxyk/build-swoole-cli:native-php-all-dependencies-alpine-php-7.4-x86_64-20230504T124927Z
           options: -v ${{ github.workspace }}:/work -w /work -e "BUILD_PHP_VERSION=${{ env.BUILD_PHP_VERSION }}"
           run: |
+            bash ./make.sh curl
             bash ./make.sh config
             bash ./make.sh build
             bash ./make.sh archive
