--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -54,7 +54,8 @@ jobs:
 
             # composer update --no-dev  --optimize-autoloader
             composer update   --optimize-autoloader
-            php prepare.php  --with-global-prefix=/usr  +inotify +apcu +ds -mongodb -gd -zip -imagick
+            # php prepare.php  --with-global-prefix=/usr  +inotify +apcu +ds -mongodb -gd -zip -imagick
+            php prepare.php   +inotify +apcu +ds -mongodb -gd -zip -imagick
 
       - name: Build
         uses: addnab/docker-run-action@v3
