--- a/.github/workflows/linux-aarch64.yml
+++ b/.github/workflows/linux-aarch64.yml
@@ -71,8 +71,8 @@ jobs:
           image: docker.io/jingjingxyk/build-swoole-cli:all-dependencies-alpine-3.17-php8-v1.0.0-aarch64-20230614T152332Z
           options: -v ${{ github.workspace }}:/work -w /work
           run: |
-            file ./bin/micro.sfx
-            readelf -h ./bin/micro.sfx
+            file ./bin/php-${{ env.BUILD_PHP_VERSION }}/bin/micro.sfx
+            readelf -h ./bin/php-${{ env.BUILD_PHP_VERSION }}/bin/micro.sfx
 
       - name: production artifacts
         uses: actions/upload-artifact@v3
