--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -124,7 +124,6 @@ jobs:
           run: |
             bash ./make.sh config
             bash ./make.sh build
-            ./php-src/sapi/cli/php -v
             bash ./make.sh archive
 
       - name: Show Build Result
@@ -137,7 +136,7 @@ jobs:
         with:
           name: php-micro-linux-x64-${{ env.BUILD_PHP_VERSION }}
           retention-days: 7
-          path: ./bin/micro.sfx
+          path: ./bin/php-${{ env.BUILD_PHP_VERSION }}/bin/micro.sfx
 
       - name: Release
         uses: softprops/action-gh-release@v1
