--- a/.github/workflows/macos-x86_64.yml
+++ b/.github/workflows/macos-x86_64.yml
@@ -113,7 +113,8 @@ jobs:
         with:
           name: php-micro-macos-x64-${{ env.BUILD_PHP_VERSION }}
           retention-days: 7
-          path: ./bin/micro.sfx
+          path: ./bin/php-${{ env.BUILD_PHP_VERSION }}/bin/micro.sfx
+
       - name: gh release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
