--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -90,7 +90,7 @@ jobs:
             # composer update --no-dev  --optimize-autoloader
             composer update   --optimize-autoloader
 
-            php prepare.php  +inotify +apcu +ds +xlswriter +ssh2  +pgsql +pdo_pgsql -mongodb --with-swoole-pgsql=1 ${{ inputs.build_type }} ${{ inputs.build_options }} --with-php-version=${{ env.BUILD_PHP_VERSION }} --with-install-library-cached=1
+            php prepare.php  +inotify +apcu +ds +xlswriter +ssh2  +pgsql +pdo_pgsql  ${{ inputs.build_type }} ${{ inputs.build_options }} --with-php-version=${{ env.BUILD_PHP_VERSION }} --with-install-library-cached=1
 
             chmod a+x make.sh
             head -n 20 make.sh
@@ -103,6 +103,8 @@ jobs:
           run: |
             bash sapi/quickstart/mark-install-library-cached.sh
             bash ./make.sh all-library
+            ls -lh /usr/local/swoole-cli/pgsql/lib/pkgconfig
+            cat /usr/local/swoole-cli/pgsql/lib/pkgconfig/libpq.pc
 
       - name: Build
         uses: addnab/docker-run-action@v3
