--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -78,7 +78,7 @@ jobs:
           set -x
           bash sapi/download-box/download-box-get-archive-from-container.sh
 
-      - name: Prepare
+      - name: Prepare and Build all-library and Build
         uses: addnab/docker-run-action@v3
         with:
           image: docker.io/jingjingxyk/build-swoole-cli:all-dependencies-alpine-3.17-php7-v1.0.0-x86_64-20230614T154836Z
@@ -95,27 +95,10 @@ jobs:
             chmod a+x make.sh
             head -n 20 make.sh
 
-      - name: Build all-library
-        uses: addnab/docker-run-action@v3
-        with:
-          image: docker.io/jingjingxyk/build-swoole-cli:all-dependencies-alpine-3.17-php7-v1.0.0-x86_64-20230614T154836Z
-          options: -v ${{ github.workspace }}:/work -w /work
-          run: |
             bash sapi/quickstart/mark-install-library-cached.sh
             bash ./make.sh all-library
-            ls -lh /usr/local/swoole-cli/pgsql/lib/pkgconfig
-            cat /usr/local/swoole-cli/pgsql/lib/pkgconfig/libpq.pc
-
-      - name: Build
-        uses: addnab/docker-run-action@v3
-        with:
-          image: docker.io/jingjingxyk/build-swoole-cli:all-dependencies-alpine-3.17-php7-v1.0.0-x86_64-20230614T154836Z
-          options: -v ${{ github.workspace }}:/work -w /work -e BUILD_PHP_VERSION=${{ env.BUILD_PHP_VERSION }}
-          run: |
             bash ./make.sh config
             bash ./make.sh build
-            ./php-src/sapi/cli/php -v
-            bash ./make.sh archive
 
       - name: Show Build Result
         run: |
