--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -78,7 +78,7 @@ jobs:
             # composer update --no-dev  --optimize-autoloader
             composer update   --optimize-autoloader
 
-            php prepare.php  +swoole +gd  +pdo_pgsql --with-swoole-pgsql=1 ${{ inputs.build_type }} ${{ inputs.build_options }} --with-install-library-cached=0
+            php prepare.php  +inotify +apcu +ds +xlswriter +ssh2 +swoole +gd  +pdo_pgsql +pgsql --with-swoole-pgsql=1 ${{ inputs.build_type }} ${{ inputs.build_options }} --with-install-library-cached=0
             # --with-override-default-enabled-ext="dom,json,libxml,mbstring,tokenizer,xml,xmlwriter"
             chmod a+x make.sh
             head -n 20 make.sh
@@ -87,6 +87,7 @@ jobs:
 
             bash sapi/quickstart/mark-install-library-cached.sh
             rm -rf /usr/local/swoole-cli/pgsql
+            rm -rf /usr/local/swoole-cli/freetype
 
             bash ./make.sh all-library
 
