--- a/.github/workflows/macos-x86_64.yml
+++ b/.github/workflows/macos-x86_64.yml
@@ -4,7 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   macos-x86_64:
-    if: 0
+    if: 1
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -78,7 +78,7 @@ jobs:
           # composer update --no-dev  --optimize-autoloader
           composer update  --optimize-autoloader
 
-          php prepare.php --without-docker=1    +ds +apcu  +xlswriter +ssh2 +gd --with-build-type=release --with-swoole-pgsql=1 --with-install-library-cached=1 --with-override-default-enabled-ext=1
+          php prepare.php --without-docker=1   +apcu +ds +xlswriter +ssh2 +swoole +gd  +pdo_pgsql +pgsql --with-build-type=release --with-swoole-pgsql=1 --with-install-library-cached=1 --with-override-default-enabled-ext=0
 
       - name: Cache all-library
         uses: actions/cache@v3
@@ -95,6 +95,9 @@ jobs:
           bash make-install-deps.sh
 
           bash sapi/quickstart/mark-install-library-cached.sh
+
+          rm -rf /usr/local/swoole-cli/pgsql
+          rm -rf /usr/local/swoole-cli/freetype
 
           bash ./make.sh all-library
 
