--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -100,6 +100,7 @@ jobs:
           ./bin/swoole-cli -v
           ./bin/swoole-cli -m
           ./bin/swoole-cli --ri swoole
+          ./bin/swoole-cli --ri gd
           file ./bin/swoole-cli
           readelf -h ./bin/swoole-cli
           ./bin/swoole-cli -r "echo PHP_VERSION;"
