--- a/.github/workflows/macos-x86_64.yml
+++ b/.github/workflows/macos-x86_64.yml
@@ -114,6 +114,7 @@ jobs:
           ./bin/swoole-cli -v
           ./bin/swoole-cli -m
           ./bin/swoole-cli --ri swoole
+          ./bin/swoole-cli --ri gd
           file ./bin/swoole-cli
           otool -L ./bin/swoole-cli
           ./bin/swoole-cli -r "echo PHP_VERSION;"
