--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -78,7 +78,7 @@ jobs:
             # composer update --no-dev  --optimize-autoloader
             composer update   --optimize-autoloader
 
-            php prepare.php  +inotify +apcu +ds +xlswriter +ssh2 +swoole +gd  -pdo_pgsql -pgsql --with-swoole-pgsql=0 ${{ inputs.build_type }} ${{ inputs.build_options }} --with-install-library-cached=1
+            php prepare.php  +inotify +apcu +ds +xlswriter +ssh2 +swoole +gd  +pdo_pgsql +pgsql --with-swoole-pgsql=1 ${{ inputs.build_type }} ${{ inputs.build_options }} --with-install-library-cached=1
             # --with-override-default-enabled-ext="dom,json,libxml,mbstring,tokenizer,xml,xmlwriter"
             chmod a+x make.sh
             head -n 20 make.sh
