--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -101,6 +101,7 @@ jobs:
           ./bin/swoole-cli -m
           ./bin/swoole-cli --ri swoole
           ./bin/swoole-cli --ri gd
+          ./bin/swoole-cli --ri pdo_pgsql
           file ./bin/swoole-cli
           readelf -h ./bin/swoole-cli
           ./bin/swoole-cli -r "echo PHP_VERSION;"
