--- a/.github/workflows/macos-x86_64.yml
+++ b/.github/workflows/macos-x86_64.yml
@@ -115,6 +115,7 @@ jobs:
           ./bin/swoole-cli -m
           ./bin/swoole-cli --ri swoole
           ./bin/swoole-cli --ri gd
+          ./bin/swoole-cli --ri pdo_pgsql
           file ./bin/swoole-cli
           otool -L ./bin/swoole-cli
           ./bin/swoole-cli -r "echo PHP_VERSION;"
