--- a/.github/workflows/linux-aarch64.yml
+++ b/.github/workflows/linux-aarch64.yml
@@ -59,9 +59,7 @@ jobs:
 
             bash make-install-deps.sh
 
-            bash sapi/quickstart/mark-install-library-cached.sh
-            rm -rf /usr/local/swoole-cli/pgsql
-            rm -rf /usr/local/swoole-cli/freetype
+            # bash sapi/quickstart/mark-install-library-cached.sh
 
             bash ./make.sh config
             bash ./make.sh build
