--- a/.github/workflows/linux-aarch64.yml
+++ b/.github/workflows/linux-aarch64.yml
@@ -51,7 +51,7 @@ jobs:
 
             composer update --no-dev  --optimize-autoloader
 
-            php prepare.php +inotify +apcu +ds +xlswriter +ssh2 +pgsql +pdo_pgsql -mongodb --with-swoole-pgsql=1 --with-install-library-cached=1
+            php prepare.php +inotify +apcu +ds +xlswriter +ssh2 +pgsql +pdo_pgsql -swoole  --with-install-library-cached=1
 
             chmod a+x make.sh
             head -n 20 make.sh
@@ -59,8 +59,7 @@ jobs:
             bash make-install-deps.sh
             bash sapi/quickstart/clean-no-match-library-for-php.sh
             # bash sapi/quickstart/mark-install-library-cached.sh
-            rm -rf /usr/local/swoole-cli/pgsql
-            rm -rf /usr/local/swoole-cli/freetype
+
 
             bash ./make.sh config
             bash ./make.sh build
@@ -75,7 +74,6 @@ jobs:
             ./php-src/sapi/cli/php -v
             ./php-src/sapi/cli/php -m
             ./php-src/sapi/cli/php --ri gd
-            ./php-src/sapi/cli/php --ri swoole
             ./php-src/sapi/cli/php --ri pgsql
             ./php-src/sapi/cli/php --ri pdo_pgsql
             file ./bin/php-${{ env.BUILD_PHP_VERSION }}/bin/php
